# hexagonal-backend-template-python

./: .gitignore  CHANGELOG.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  conventions.yml  static_analysis.yml
python_template/app/commands/: delete_account.py  update_account.py
python_template/app/queries/: get_account_by_id.py
python_template/app/services/: delete_account_service.py  get_accounts_service.py  insert_account_service.py  update_account_service.py
python_template/domain/events/: account_inserted.py  account_not_inserted.py
python_template/domain/model/: account.py
python_template/infrastructure/acl/dto/: get_all_accounts_dto.py
python_template/infrastructure/acl/translators/: account_dto_translator.py  delete_account_request_dto_translator.py  get_accounts_request_dto_translator.py  get_all_accounts_response_dto_translator.py  insert_account_request_dto_translator.py  update_account_request_dto_translator.py
python_template/infrastructure/injector/: application_services_module.py  injector.py  repositories_module.py
python_template/infrastructure/server/: application.py  endpoints.py
src/app/services/: delete_account_service.py  get_accounts_service.py  insert_account_service.py  update_account_service.py
src/domain/: error.py
src/domain/events/: account_deleted.py  account_inserted.py  account_not_inserted.py  account_updated.py  event.py
src/domain/services/: validation_service.py
src/infrastructure/acl/dto/: get_all_accounts_dto.py
src/infrastructure/acl/translators/: account_dto_translator.py  event_dto_translator.py  get_all_accounts_response_dto_translator.py  insert_account_request_dto_translator.py  update_account_request_dto_translator.py
src/infrastructure/injector/: application_services_module.py  database_module.py  injector.py  repositories_module.py
src/infrastructure/migrations/: env.py
tests/: conftest.py
tests/resources/fixtures/: application_fixture.py  database_fixture.py
(+50 files in other folders)
