[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["cdanmontoya <cdanmontoya@experimentality.co>"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
