[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["cdanmontoya <carlos.danmontoya@gmail.com>"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^7.5.1"
factory-boy = "^3.3.0"
faker = "^25.2.0"
pytest = "^8.2.1"
mypy = "^1.10.0"
testcontainers = {extras = ["postgres"], version = "^4.4.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
